# Prizm-Agent

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  history.txt  pyproject.toml  requirements.txt  signin_body.json  test_sdk_basic.py  test_sdk_basic_async_operations.py
.devtest/: main.py
core/: main.py
core/config/: db_loader.py
core/modules/human_system/api/: __init__.py
core/modules/human_system/schemas/: __init__.py
core/modules/human_system/tests/: test_user.py
core/python/: main.py
core/python/agent_core/: context_binder.py  orchestrator.py
core/python/config/: database.yaml  db_loader.py
core/python/modules/human_system/: README.md  __init__.py  constants.py
core/python/modules/human_system/api/: user_router.py
core/python/modules/human_system/interfaces/: __init__.py  user_interface.py
core/python/modules/human_system/models/: __init__.py  coupons.py  gifts.py  invite.py  luck_cards.py  permissions.py  points.py  user.py  wallet.py
core/python/modules/human_system/schemas/: permission_schema.py  user_schema.py
core/python/modules/human_system/services/: __init__.py  permission_service.py  user_service.py
core/python/modules/human_system/tests/: __init__.py
core/python/surrealdb/: surreal_driver.py  surreal_utils.py
core/python/surrealdb/schemas/: user.yaml
core/surrealdb/: query_builder.py  schema_loader.py  schema_model.py  surreal_core_client.py  surreal_driver.py
core/surrealdb/schemas/human_system/: user.yaml
scripts/: schema_apply.py  seed_users.py
scripts/generate/: generate_user_module.py
